--- a/Final_Report.ipynb
+++ b/Final_Report.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e83b6b9b",
    "metadata": {
     "id": "8b472923"
    },
@@ -13,7 +12,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f542746",
    "metadata": {
     "id": "eec7f398"
    },
@@ -23,18 +21,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cf87353",
    "metadata": {
     "id": "098b9f30"
    },
    "source": [
-    "Either high-cap or low-cap cryptocurrencies are investment opportunities. This project's main objective is to develop models that are capable of predicting altcoin cryptocurrency close prices, as well as forecast prices. Altcoins generally have high volatility and large price swings, which are conducive to short-term trading. We look at short / long term trading and low-cap coins. Additionally, there a function will be utilize that measures the profit considering that there is a transaction fee to pay for each transaction. \n",
-    "With cryptocurrency interest on the rise, there are many investment (short-term or long-term) opportunities to be had, especially due to the volatility of certain digital assets. The cryptocurrency market is tough to predict, just as the stock market, so we aim to create simple and complex models which are capable of forecasting low-cap coins and altcoins, which are generally subject to larger price swings. Using these models, the ultimate goal is to profit through trading these assets. We do this using autoregression, MACD and Bollinger Bands, and LSTM models. We test on historical price data of many different cryptocurrencies, and forecast using more recent data gathered from CoinAPI."
+    "Either high-cap or low-cap cryptocurrencies are investment opportunities. This project's main objective is to develop models that are capable of predicting altcoin cryptocurrency close prices, as well as forecast prices. Altcoins generally have high volatility and large price swings, which are conducive to short-term trading. We look at short / long term trading and low-cap coins. Additionally, there is a function that will be utilized to measure the profit, this function will take into account transaction fees in order to calculare the total profit. \n",
+    "With cryptocurrency interest on the rise, there are many investment (short-term or long-term) opportunities, especially due to the volatility of certain digital assets. The cryptocurrency market is tough to predict, just as the stock market, so we aim to create simple and complex models which are capable of forecasting low-cap coins and altcoins, which are generally subjected to larger price swings. Using these models, the ultimate goal is to profit through trading these assets. We do this using autoregression, MACD and Bollinger Bands, and LSTM models. We test on historical price data of many different cryptocurrencies, and forecast using more recent data gathered from CoinAPI."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f2c1089e",
    "metadata": {
     "id": "90ece70d"
    },
@@ -44,7 +40,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fb9fd9b",
    "metadata": {
     "id": "61223b95"
    },
@@ -58,7 +53,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd541f1f",
    "metadata": {
     "id": "f6c934d5"
    },
@@ -68,7 +62,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "561464f2",
    "metadata": {},
    "source": [
     "Autoregression models, such as ARIMA, VAR, VARMA, as well as LSTM models have been used to model and forecast cryptocurrency prices."
@@ -76,7 +69,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53d5f5eb",
    "metadata": {},
    "source": [
     "1. Short-term bitcoin market prediction via machine learning (Patrick Jaquart, David Dann, Christof Weinhardt)\n",
@@ -86,7 +78,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a88d3279",
    "metadata": {
     "id": "38227bf2"
    },
@@ -96,12 +87,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "925a4e17",
    "metadata": {
     "id": "0104ad02"
    },
    "source": [
-    "The analysis will only focus on the pricing information, leaving aside any factor which may impact the price of Bitcoin, like for example, news, which can play a very important rule. Price history is available on a daily basis from 2013. The datasets that are used for this project has the historical price information of some of the top crypto currencies by market capitalization. The dataset is from Kaggle - https://www.kaggle.com/sudalairajkumar/cryptocurrencypricehistory \n",
+    "The analysis will only focus on the pricing information, leaving aside any factor which may impact the price of Bitcoin, like for example, news, which can play a very important rule. Price history is available on a daily basis starting from 2013. The datasets used for this project have the historical price information of some of the top crypto currencies by market capitalization. The dataset used for this project is from Kaggle https://www.kaggle.com/sudalairajkumar/cryptocurrencypricehistory \n",
+    "\n",
+    "Data Content: \n",
+    "\n",
     "- Date : date of observation\n",
     "- Open : Opening price on the given day\n",
     "- High : Highest price on the given day\n",
@@ -113,7 +106,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "322c6211",
    "metadata": {
     "id": "680e5121"
    },
@@ -123,7 +115,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1045ca0",
    "metadata": {
     "id": "5f388bfa"
    },
@@ -133,7 +124,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "252dfc2d",
    "metadata": {
     "id": "7c52e6f6"
    },
@@ -143,7 +133,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e6dce7e",
    "metadata": {},
    "source": [
     "To tackle the previously-outlined research gap, we systematically evaluate different prediction models, features, and horizons. We used technical analyses. Thereby, we implement data gathering, preprocessing, and model building using the Python programming language. We do this using autoregression, MACD and Bollinger Bands, and LSTM models. "
@@ -151,7 +140,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae41e27f",
    "metadata": {},
    "source": [
     "##  Features Engineering"
@@ -164,7 +152,6 @@
     }
    },
    "cell_type": "markdown",
-   "id": "3d0abc1a",
    "metadata": {},
    "source": [
     "![download%20%285%29.png](attachment:download%20%285%29.png)"
@@ -172,7 +159,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52f05aed",
    "metadata": {},
    "source": [
     "#### Figure 1: Updated DataFrame with new features"
@@ -180,7 +166,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "943a17da",
    "metadata": {},
    "source": [
     "### Technical Indicators"
@@ -188,7 +173,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d4da53b",
    "metadata": {},
    "source": [
     "Moving Average (lagging) analyze whether a market is moving up, down, or sideways over time.\n",
@@ -207,7 +191,6 @@
     }
    },
    "cell_type": "markdown",
-   "id": "72163e81",
    "metadata": {},
    "source": [
     "![download%20%286%29.png](attachment:download%20%286%29.png)"
@@ -215,7 +198,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc70fa6d",
    "metadata": {},
    "source": [
     "#### Figure 2: Bollinger Bands for Bitcoin"
@@ -228,7 +210,6 @@
     }
    },
    "cell_type": "markdown",
-   "id": "5769eca1",
    "metadata": {},
    "source": [
     "![download%20%287%29.png](attachment:download%20%287%29.png)"
@@ -236,7 +217,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "994657f7",
    "metadata": {},
    "source": [
     "#### Figure 3: MACD for Bitcoin"
@@ -249,7 +229,6 @@
     }
    },
    "cell_type": "markdown",
-   "id": "709764af",
    "metadata": {},
    "source": [
     "![download%20%288%29.png](attachment:download%20%288%29.png)"
@@ -257,7 +236,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1664e4ae",
    "metadata": {},
    "source": [
     "#### Figure 4: Volume for Bitcoin"
@@ -265,7 +243,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ad2553d",
    "metadata": {
     "id": "113b3d65"
    },
@@ -280,7 +257,6 @@
     }
    },
    "cell_type": "markdown",
-   "id": "f06beb54",
    "metadata": {
     "id": "fb9ad8ac",
     "outputId": "d4136271-b183-4553-8a17-57610be40779"
@@ -291,7 +267,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b4d26f0",
    "metadata": {
     "id": "f7d03d6c"
    },
@@ -301,7 +276,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efa9621c",
    "metadata": {
     "id": "9107582c"
    },
@@ -311,7 +285,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ded9ac96",
    "metadata": {
     "id": "iJw1FU27bAM5"
    },
@@ -321,7 +294,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13284de6",
    "metadata": {
     "id": "Y3rxK8K2bJW5"
    },
@@ -331,7 +303,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fbdda16",
    "metadata": {},
    "source": [
     "### Technical Analysis"
@@ -339,7 +310,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac07a5aa",
    "metadata": {},
    "source": [
     "#### Basiline model\n",
@@ -354,7 +324,6 @@
     }
    },
    "cell_type": "markdown",
-   "id": "a8772936",
    "metadata": {},
    "source": [
     "![download%20%289%29.png](attachment:download%20%289%29.png)"
@@ -362,7 +331,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34d163be",
    "metadata": {},
    "source": [
     "#### Figure 7: Baseline Model Accuracy"
@@ -370,7 +338,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "391793b5",
    "metadata": {},
    "source": [
     "#### Using Bollinger Bands to Make Decision\n",
@@ -385,7 +352,6 @@
     }
    },
    "cell_type": "markdown",
-   "id": "c1105f16",
    "metadata": {},
    "source": [
     "![download%20%2810%29.png](attachment:download%20%2810%29.png)"
@@ -398,7 +364,6 @@
     }
    },
    "cell_type": "markdown",
-   "id": "02d15692",
    "metadata": {},
    "source": [
     "![download%20%2811%29.png](attachment:download%20%2811%29.png)"
@@ -406,7 +371,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dae4a4bd",
    "metadata": {},
    "source": [
     "#### Figure 8: Trading history of Cardano (Bollinger Bands and MACD)"
@@ -414,7 +378,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6361efa0",
    "metadata": {
     "id": "5b48cf5"
    },
@@ -424,7 +387,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0476d50",
    "metadata": {
     "id": "2849dca2"
    },
@@ -439,7 +401,6 @@
     }
    },
    "cell_type": "markdown",
-   "id": "9820c5dd",
    "metadata": {
     "id": "9437b1d9"
    },
@@ -449,7 +410,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe5861ba",
    "metadata": {},
    "source": [
     "#### Figure 9: Lag Plot of the natural logarithm of the close price of Cardano"
@@ -457,7 +417,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9084cff",
    "metadata": {
     "id": "39ecadd8"
    },
@@ -472,7 +431,6 @@
     }
    },
    "cell_type": "markdown",
-   "id": "f160c95f",
    "metadata": {
     "id": "0ce40427"
    },
@@ -482,7 +440,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61d684c3",
    "metadata": {},
    "source": [
     "#### Figure 10: Autocorrelation Plot of the natural logarithm of the close price of Cardano"
@@ -490,7 +447,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c12eabf",
    "metadata": {
     "id": "bbc3d844"
    },
@@ -502,7 +458,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac502122",
    "metadata": {
     "id": "f2833c5a"
    },
@@ -512,7 +467,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "439d48db",
    "metadata": {
     "id": "5587e829"
    },
@@ -527,7 +481,6 @@
     }
    },
    "cell_type": "markdown",
-   "id": "8fdfedee",
    "metadata": {
     "id": "5c972be5"
    },
@@ -537,7 +490,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbc1b6e1",
    "metadata": {},
    "source": [
     "#### Figure 11: Output of the autoregression model"
@@ -550,7 +502,6 @@
     }
    },
    "cell_type": "markdown",
-   "id": "212c9ac3",
    "metadata": {},
    "source": [
     "![download%20%281%29.png](attachment:download%20%281%29.png)"
@@ -558,7 +509,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6c6863c",
    "metadata": {},
    "source": [
     "#### Figure 12: Prediction of Cardano price on the hold-out set"
@@ -571,7 +521,6 @@
     }
    },
    "cell_type": "markdown",
-   "id": "e4577e6d",
    "metadata": {
     "id": "e53bc93a"
    },
@@ -581,7 +530,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fb686f2",
    "metadata": {},
    "source": [
     "#### Figure 13: Future prediction of 7 days past the end of the hold-out set"
@@ -594,7 +542,6 @@
     }
    },
    "cell_type": "markdown",
-   "id": "afea0142",
    "metadata": {
     "id": "3cde2c57"
    },
@@ -604,7 +551,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20499012",
    "metadata": {},
    "source": [
     "#### Figure 14: Trading scheme for the 7-day forecast"
@@ -612,7 +558,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3076a8d0",
    "metadata": {
     "id": "0b0b724c"
    },
@@ -622,7 +567,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dbe1d9a",
    "metadata": {
     "id": "4bfd3634"
    },
@@ -633,7 +577,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40f615cf",
    "metadata": {
     "id": "e0c6f855"
    },
@@ -643,7 +586,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20945d2e",
    "metadata": {
     "id": "-QPV-WjC5vUX"
    },
@@ -653,7 +595,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cabc1ab",
    "metadata": {
     "id": "RZIL0fMiDc3w"
    },
@@ -664,7 +605,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b161784",
    "metadata": {
     "id": "1wBnGA8vDOLN"
    },
@@ -674,7 +614,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef3930ba",
    "metadata": {
     "id": "GFwwdyUcFOKm"
    },
@@ -684,7 +623,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "115fefbe",
    "metadata": {
     "id": "g0HVqxdHqETA"
    },
@@ -694,7 +632,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8de0ad42",
    "metadata": {
     "id": "5c0102f7"
    },
@@ -704,7 +641,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97bc789d",
    "metadata": {
     "id": "3c295321"
    },
@@ -716,7 +652,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01296698",
    "metadata": {
     "id": "be371e6d"
    },
@@ -726,7 +661,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21381da7",
    "metadata": {
     "id": "IVDwDGCHpJaL"
    },
@@ -736,7 +670,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d052ca1",
    "metadata": {
     "id": "eiQW9KIvpgvY"
    },
@@ -746,7 +679,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d04fad1f",
    "metadata": {
     "id": "yb56Ehp-p72r"
    },
@@ -757,7 +689,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d691b682",
    "metadata": {
     "id": "lZlU8cw2syZa"
    },
@@ -767,7 +698,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbcdf6e8",
    "metadata": {
     "id": "7-c7qw7cs1SI"
    },
@@ -777,7 +707,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b794d15",
    "metadata": {
     "id": "M6T87knwxKEy"
    },
@@ -787,7 +716,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3e0ef11",
    "metadata": {
     "id": "5LVE22EsESe7"
    },
@@ -797,7 +725,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25a20e08",
    "metadata": {
     "id": "KoqI241mEXUG"
    },
@@ -807,7 +734,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4c5006a",
    "metadata": {
     "id": "w-P7Gro4EinI"
    },
@@ -817,7 +743,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "838ffb80",
    "metadata": {
     "id": "89dbce86"
    },
@@ -827,7 +752,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b454d5e1",
    "metadata": {},
    "source": [
     "In the grand scheme of things, we have created models that have different tradeoffs, that are able to predict low-cap cryptocurrencies' values to a certain extent. We examined the simple autoregression model, the Bollinger Bands and MACD methods, and the LSTM model. We have more than enough data, which allows us to use larger lag values if the forecast is longer-term. The LSTM model is promising, as well as the autoregression model. These, combined with the function that is able to take the transaction cost of each sell/buy into account - can inform one's decision on when to buy and sell a cryptocurrency. For future research, a model with more endogenous variables, such as a vector autoregression model taking into account open, low, and high prices, as well as volume and marketcap, should be examined."
@@ -835,7 +759,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "811c478b",
    "metadata": {},
    "source": [
     "## Contribution"
@@ -843,7 +766,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a511786",
    "metadata": {},
    "source": [
     "Each person's work is showns on figure below."
@@ -856,7 +778,6 @@
     }
    },
    "cell_type": "markdown",
-   "id": "99a95b28",
    "metadata": {},
    "source": [
     "![download%20%2812%29.png](attachment:download%20%2812%29.png)"
@@ -883,7 +804,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
